
2007-04-05  Martin Kutschker  <martin.t.kutschker@blackbox.net>

	* Renamed Typoscript condition julianday to dayofyear (see change from 2007-04-03)

2007-04-04 Andreas Otto <andreas.otto@dkd.de>

	* Related to bug #4447: A directory handle was not correclty used.

2007-04-03 Andreas Otto <andreas.otto@dkd.de>

	* Implemented feature request #4914: Adding to new conditions (year and julianday) to class.t3lib_matchcondition.php.

2007-04-03  Dmitry Dulepov  <dmitry@typo3.org>

	* Workspaces: added configurable synchronious stage change and publishing

2007-04-02  Michael Stucki  <michael@typo3.org>

	* Fixed bug #5088: Cache is not saved properly because of charset conflict in the database. Changing the field type of cache_hash.content from mediumtext to mediumblob. To make this work, you need to compare your database in the Install Tool.

2007-04-02  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #4447: "Clear FE cache" doesn't clear "typo3temp/cache_pages" directory

2007-03-30  Oliver Hader  <oh@inpublica.de>

	* Fixed bug #5248: IRRE - Element browser cannot be used on new child records of a new parent record

2007-03-30  Franz Holzinger  <kontakt@fholzinger.com>

	* Fixed bug #4725: EM: Include older versions when fetching data using searchExtensionsXML()

2007-03-28  Oliver Hader  <oh@inpublica.de>

	* Fixed bug #5288: Missing parameter in recursion of t3lib_div::array_merge_recursive_overrule (thanks to Simon Tuck)
	* Fixed bug #5177: RTEhtmlarea not correctly displayed in IRRE child form-fields and tabs

2007-03-28  Ingmar Schlecht  <ingmar@typo3.org>

	* Adding page tree backwards compatibility for JavaScript function hilight_row() to tree.js (by Benjamin Mack)

2007-03-28  Patrick Broens  <patrick@patrickbroens.nl>

	* Fixed bug #5266: WamCom browser check in htmlarea.js conflicted with Firefox 2.0.0.3

2007-03-28  Ernesto Baschny  <ernst@cron-it.de>

	* Added +stdWrap for the .src parameter of "FRAME"

2007-03-27  Dmitry Dulepov  <dmitry@typo3.org>
